<resources>
    <string name="app_name">TohDu</string>
    <string name="your_to_do_list">Your To Do List</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="report_bug">Report Bug</string>
    <string name="add_button">Add</string>
    <string name="todo_title">Todo title</string>
    <string name="note">Note</string>
    <string name="back_button">Back</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="chatgtp">CHATGTP</string>
    <string name="your_schedule">Your Schedule</string>
    <string name="todo_titleH">Todo Title</string>
    <string name="title">Title</string>
    <string name="SampleTodoTextWidget">Sample Todo</string>
    <string name="SampleScheduleTextWidget">Sample Schedule</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="select_year_term">Select Year/Term</string>

    <string-array name="daySpinner">
        <item>---</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="typeSpinner">
        <item>---</item>
        <item>Major</item>
        <item>Minor</item>
    </string-array>
</resources>
