<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/TextInputLayoutStyle"
    tools:context=".Page.GeneralTodoListPage"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backButton"
            style="@style/BackButton"
            android:contentDescription="@string/back_button" />

        <ImageView
            android:id="@+id/changeButton"
            style="@style/BackButton"
            android:layout_alignParentEnd="true"
            android:contentDescription="Change Button"
            android:src="@drawable/baseline_create_24" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:text="@string/todo_titleH"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/title"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/black"
        >

        <EditText
            android:id="@+id/todoTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textShortMessage"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pickDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onButtonClicked"
            android:padding="20dp"
            android:text="Pick Date" />

        <TextView
            android:id="@+id/pickTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onButtonClicked"
            android:padding="20dp"
            android:text="Pick Time" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:text="@string/note"
        android:textSize="30sp"

        android:textStyle="bold"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/note"
        app:hintTextColor="@color/black"

        >

        <EditText
            android:id="@+id/noteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="top"
            android:inputType="textMultiLine"

            android:lines="6"
            android:overScrollMode="always"
            android:padding="5dp"
            android:scrollbarStyle="insideInset"
            android:scrollHorizontally="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20dp"
        android:onClick="onButtonClicked"
        android:paddingHorizontal="50dp"
        android:text="Submit"
        android:textSize="30sp" />


</LinearLayout>