<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page.HomePage">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/todoTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/your_to_do_list"
                android:textSize="50sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/historyBtn"
                android:layout_width="50dp"
                android:layout_height="58dp"
                android:layout_below="@id/todoTxt"
                android:layout_alignParentEnd="true"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="History Button"
                android:onClick="onButtonClicked"
                android:src="@drawable/baseline_history_24" />

            <view
                style="@style/BreakLine"
                class="android.widget.TextView"
                android:layout_below="@id/todoTxt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/bottomNavigation"
                android:layout_below="@+id/historyBtn"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/todoRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <view
                    style="@style/BreakLine"
                    class="android.widget.TextView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="History"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/historyRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                    />
            </LinearLayout>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/gray"
                android:contentDescription="@string/add_button"
                android:onClick="onButtonClicked"
                android:src="@drawable/baseline_add_24"
                android:tint="@color/white"
                android:translationZ="10dp"
                app:elevation="2dp" />

            <LinearLayout
                android:id="@+id/bottomNavigation"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bottom_nav_background"
                android:paddingHorizontal="10dp">

                <LinearLayout
                    android:id="@+id/homePage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="bottomNaviAction"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/homeIcon"
                        style="@style/BottomNavIcons"
                        android:contentDescription="@string/home"
                        android:contextClickable="true"

                        android:src="@drawable/baseline_home_24"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/homeLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:letterSpacing="0.1"
                        android:text="@string/home"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/schedulePage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="bottomNaviAction"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/scheduleIcon"
                        style="@style/BottomNavIcons"
                        android:contentDescription="@string/schedule"
                        android:src="@drawable/schedule_icon"

                        />

                    <TextView
                        android:id="@+id/scheduleLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:letterSpacing="0.1"
                        android:text="@string/schedule"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>

                <view
                    class="android.widget.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/notePage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="bottomNaviAction"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/noteIcon"
                        style="@style/BottomNavIcons"
                        android:contentDescription="@string/note"
                        android:src="@drawable/baseline_notes_24"

                        />

                    <TextView
                        android:id="@+id/noteLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:letterSpacing="0.1"
                        android:text="@string/schedule"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/aiPage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="bottomNaviAction"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/aiIcon"
                        style="@style/BottomNavIcons"
                        android:contentDescription="@string/chatgtp"
                        android:src="@drawable/ai_icon"

                        />

                    <TextView
                        android:id="@+id/aiLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:letterSpacing="0.1"
                        android:text="@string/schedule"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>


            </LinearLayout>

            <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
            <!--        android:id="@+id/bottomNavigation"-->
            <!--        android:layout_width="match_parent"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:layout_alignParentBottom="true"-->
            <!--        android:background="#B0ADAD"-->
            <!--        android:visibility="invisible"-->
            <!--        app:itemIconTint="@color/black"-->
            <!--        app:labelVisibilityMode="selected"-->
            <!--        app:menu="@menu/bottom_navigation" />-->


        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>